--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/vercel": "^7.8.2",
     "astro": "^4.16.10",
     "astro-font": "^0.1.81",
