--- a/.netlify/v1/config.json
+++ b/.netlify/v1/config.json
@@ -1,1 +1,1 @@
-{"images":{"remote_images":["https?://image\\.tmdb\\.org/.*","https://image\\.tmdb\\.org(:[0-9]+)?(\\/[^?#]*)?([?][^#]*)?"]},"headers":[{"for":"/_astro/*","values":{"Cache-Control":"public, max-age=31536000, immutable"}}]}
+{"images":{"remote_images":["https?://image\\.tmdb\\.org/.*","https://image\\.tmdb\\.org(:[0-9]+)?(\\/[^?#]*)?([?][^#]*)?"]},"headers":[{"for":"/assets/images/*","values":{"Cache-Control":"public, max-age=31536000, immutable"}}]}
