--- a/netlify.toml
+++ b/netlify.toml
@@ -5,15 +5,28 @@
 
 [dev]
   command = "npm run dev"
-  framework = "astro"
-
-[functions]
-  node_bundler = "esbuild"
+  framework = "#astro"
 
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/entry"
   status = 200
+  force = true
+
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
+
+# Add headers for different asset types
+[[headers]]
+  for = "/styles/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/scripts/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/assets/*"
