--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "strict": true,
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
@@ -9,6 +16,9 @@
       "@types/*": ["src/types/*"],
       "@assets/*": ["src/assets/*"],
       "@scripts/*": ["src/scripts/*"]
-    }
-  }
+    },
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.astro"],
+  "exclude": ["node_modules"]
 }
